--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-prefetch>
+	<body data-sveltekit-prefetch class="overflow-x-hidden">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
